opam-version: "1.2"
name: "ppx_getenv01"
maintainer: "Viet Le <vietlq85@gmail.com>"
authors: "Viet Le <vietlq85@gmail.com>"
homepage: "https://github.com/vietlq/ppx_getenv01"
bug-reports: "https://github.com/vietlq/ppx_getenv01/issues"
license: "MIT"
dev-repo: "https://github.com/vietlq/ppx_getenv01"
tags: [ "syntax" ]
build: [
  make
]
build-test: [
  "ocamlbuild" "-classic-display" "-use-ocamlfind" "./ppx_getenv01" "--"
]
install: [make "install"]
remove: ["ocamlfind" "remove" "ppx_getenv01"]
depends: [
  "ocamlfind" {build}
]
available: [ocaml-version >= "4.02.0"]
